// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/layout/EmojiSplash.tsx should render itself & its children - heading and sub-heading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 duhwY h-full"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
          data-align="center"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="center"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
            data-align="center"
            data-direction="vertical"
            data-gap="spacious"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 text-5xl"
            >
              <img
                alt="🍺"
                class="emoji"
                draggable="false"
                src="images/twemoji/1f37a.svg"
              />
            </div>
            <div
              class="Box-sc-g0xbh4-0 text-xl font-semibold"
            >
              Test Heading
            </div>
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-center"
          >
            Test Sub-Heading
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 duhwY h-full"
      data-align="center"
      data-direction="vertical"
      data-justify="center"
      data-padding="spacious"
      data-wrap="nowrap"
    >
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
        data-align="center"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="center"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
          data-align="center"
          data-direction="vertical"
          data-gap="spacious"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 text-5xl"
          >
            <img
              alt="🍺"
              class="emoji"
              draggable="false"
              src="images/twemoji/1f37a.svg"
            />
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-xl font-semibold"
          >
            Test Heading
          </div>
        </div>
        <div
          class="Box-sc-g0xbh4-0 text-center"
        >
          Test Sub-Heading
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/layout/EmojiSplash.tsx should render itself & its children - heading only 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 duhwY h-full"
        data-align="center"
        data-direction="vertical"
        data-justify="center"
        data-padding="spacious"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
          data-align="center"
          data-direction="vertical"
          data-gap="condensed"
          data-justify="center"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
            data-align="center"
            data-direction="vertical"
            data-gap="spacious"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <div
              class="Box-sc-g0xbh4-0 text-5xl"
            >
              <img
                alt="🍺"
                class="emoji"
                draggable="false"
                src="images/twemoji/1f37a.svg"
              />
            </div>
            <div
              class="Box-sc-g0xbh4-0 text-xl font-semibold"
            >
              Test Heading
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="Stack__StyledStack-sc-x3xa2i-0 duhwY h-full"
      data-align="center"
      data-direction="vertical"
      data-justify="center"
      data-padding="spacious"
      data-wrap="nowrap"
    >
      <div
        class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
        data-align="center"
        data-direction="vertical"
        data-gap="condensed"
        data-justify="center"
        data-padding="none"
        data-wrap="nowrap"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 duhwY"
          data-align="center"
          data-direction="vertical"
          data-gap="spacious"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <div
            class="Box-sc-g0xbh4-0 text-5xl"
          >
            <img
              alt="🍺"
              class="emoji"
              draggable="false"
              src="images/twemoji/1f37a.svg"
            />
          </div>
          <div
            class="Box-sc-g0xbh4-0 text-xl font-semibold"
          >
            Test Heading
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
